--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.3.1",
+    "@vueuse/core": "^9.12.0",
+    "@vueuse/nuxt": "^9.12.0",
     "autoprefixer": "^10.4.13",
     "nuxt": "^3.1.2",
     "postcss": "^8.4.21",
