--- a/front/package.json
+++ b/front/package.json
@@ -15,5 +15,9 @@
     "nuxt": "^3.1.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   }
 }
